refactor: Update dependencies and Vite configuration
Updates project dependencies to newer versions and simplifies the Vite configuration. This includes adjusting import maps for CDN-hosted modules and standardizing TSconfig settings for improved build stability and consistency.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gitnotes---personal-markdown-manager",
+  "name": "gitnotes",
   "private": true,
-  "version": "0.0.0",
+  "version": "2.5.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,18 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "lucide-react": "^0.561.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.10.1",
-    "react-dom": "^19.2.3",
-    "remark-gfm": "^4.0.1",
-    "uuid": "^13.0.0"
+    "lucide-react": "^0.468.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   }
 }
