feat: Update PWA icons
Replaces the generic Git branch SVG icons with a custom GitNotes logo image. This improves the application's branding and recognition within the PWA context.

--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,14 @@
   "theme_color": "#030303",
   "icons": [
     {
-      "src": "https://esm.sh/lucide-static@0.468.0/icons/git-branch.svg",
+      "src": "https://pic.wildsalt.me/storage/img/logo/gitnotes.png",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/png"
     },
     {
-      "src": "https://esm.sh/lucide-static@0.468.0/icons/git-branch.svg",
+      "src": "https://pic.wildsalt.me/storage/img/logo/gitnotes.png",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/png"
     }
   ]
 }
