--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitnotes",
   "private": true,
-  "version": "2.6.0",
+  "version": "3.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
