--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-router-dom": "^7.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
+    "turndown": "^7.1.3",
+    "turndown-plugin-gfm": "^1.0.2",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/turndown": "^5.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.7.2",
     "vite": "^6.0.3"
