feat: Introduce graph view and dependency linking
Integrates React Flow for visual representation of file relationships, enabling users to see dependencies and navigate their knowledge base visually. Updates project dependencies to include `@xyflow/react` and `dagre` for graph rendering. Refactors repository and file components to support the new graph view mode and update initial repository data to reflect a more connected structure.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gitnotes",
   "private": true,
-  "version": "3.0.0",
+  "version": "3.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@xyflow/react": "^12.0.0",
     "clsx": "^2.1.0",
+    "dagre": "^0.8.5",
     "lucide-react": "^0.468.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -23,6 +25,7 @@
     "uuid": "^11.0.3"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/react-syntax-highlighter": "^15.5.11",
